Added documentation for user crud apis
